@@ -563,7 +563,7 @@ under \f$\phi\f$ of the set \f$S \sseq \Rset^n\f$;
 similarly, we denote by \f$\phi^{-1}(S') \sseq \Rset^n\f$
 the <EM>preimage</EM> under \f$\phi\f$ of \f$S' \sseq \Rset^m\f$,
 that is the largest set \f$S \sseq \Rset^n\f$ such that
-\f$\phi(S) = S'\f$.
+\f$\phi(S) \sseq S'\f$.
 
 Both \f$\Pset_n\f$ and \f$\CPset_n\f$ are closed under
 the application of any space-dimension preserving
@@ -616,13 +616,23 @@ For instance,
 suppose the polyhedron \f$\cP\f$
 to be transformed is the square in \f$\Rset^2\f$
 generated by the set of points
-\f$\bigl\{(0, 0), (0, 3), (3, 0), (3, 3)\bigr\}\f$.
+\f$\bigl\{
+     (0, 0)^\transpose,
+     (0, 3)^\transpose,
+     (3, 0)^\transpose,
+     (3, 3)^\transpose
+   \bigr\}\f$.
 Then, for example if the considered variable is \f$x_0\f$ and
 the linear expression \f$x_0 + 2 x_1 + 4\f$
 (so that \f$k = 0\f$, \f$a_0 = 1, a_1 = 2, b = 4\f$),
 the affine image operator will translate \f$\cP\f$
 to the parallelogram \f$\cP_1\f$ generated by the set of points
-\f$\bigl\{(4, 0), (10, 3), (7, 0), (13, 3)\bigr\}\f$
+\f$\bigl\{
+     (4, 0)^\transpose,
+     (10, 3)^\transpose,
+     (7, 0)^\transpose,
+     (13, 3)^\transpose
+   \bigr\}\f$
 with height equal to the side of the square
 and oblique sides parallel to the line \f$x_0 - 2 x_1\f$.
 If the considered variable is as before (i.e., \f$k = 0\f$)
