@@ -22,7 +22,9 @@ USA.
 For the most up-to-date information see the Parma Polyhedra Library
 site: http://www.cs.unipr.it/ppl/ . */
 
-#include "ppl_test.hh"
+#include "ppl_install.hh"
+#include "print.hh"
+#include "ehandlers.hh"
 
 using namespace std;
 using namespace Parma_Polyhedra_Library;
@@ -44,7 +46,7 @@ main() {
   ph1.add_constraint(A + B >= -2);
   ph1.add_constraint(A >= -3);
 
-  const ConSys cs = ph1.minimized_constraints();
+  ConSys cs = ph1.minimized_constraints();
 
   C_Polyhedron ph2(cs);
   C_Polyhedron known_result(2);
