@@ -22,7 +22,9 @@ USA.
 For the most up-to-date information see the Parma Polyhedra Library
 site: http://www.cs.unipr.it/ppl/ . */
 
-#include "ppl_test.hh"
+#include "ppl_install.hh"
+#include "print.hh"
+#include "ehandlers.hh"
 
 using namespace std;
 using namespace Parma_Polyhedra_Library;
@@ -48,7 +50,7 @@ main() {
 
   C_Polyhedron ph1(gs1);
 
-  const GenSys gs2 = ph1.minimized_generators();
+  GenSys gs2 = ph1.minimized_generators();
 
 #if NOISY
   print_generators(gs2, "*** gs2 ***");
